<resources>
    <string name="app_name">Slagalica</string>
    <string name="login_title">Slagalica</string>
    <string name="username_or_email">Mejl ili korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijavi se</string>
    <string name="register_prompt">Nemaš nalog? Registruj se</string>
    <string name="username_required">
        Unesite mejl ili korisničko ime
    </string>
    <string name="password_required">
        Unesite lozinku
    </string>
    <string name="login_success">Uspešna prijava</string>
    <string name="register_title">Registracija</string>
    <string name="email">Mejl</string>
    <string name="username">Korisničko ime</string>
    <string name="region">Region</string>
    <string name="repeat_password">Ponovljena lozinka</string>
    <string name="register">Registruj se</string>
    <string name="email_required">Unesite mejl</string>
    <string name="username_required_register">Unesite korisničko ime</string>
    <string name="region_required">Unesite region</string>
    <string name="repeat_password_required">Ponovite lozinku</string>
    <string name="passwords_do_not_match">Lozinke se ne poklapaju</string>
    <string name="registration_success">Uspešna registracija</string>
    <string name="login_prompt">Već imaš nalog? Prijavi se</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profil korisnika</string>
    <string name="change_avatar">Izmeni avatar</string>
    <string name="username_label">Korisničko ime</string>
    <string name="email_label">Email adresa</string>
    <string name="tokens_label">Broj tokena</string>
    <string name="stars_label">Ukupan broj zvezda</string>
    <string name="league_label">Liga</string>
    <string name="region_label">Region</string>
    <string name="qr_code_label">QR kod za poziv prijatelja</string>
    <string name="statistics_title">Statistika igrača</string>
    <string name="played_games">Ukupan broj odigranih partija</string>
    <string name="wins_losses">Pobede / Porazi</string>
    <string name="game_success">Uspešnost po igrama</string>
    <string name="ko_zna_zna_stat">Ko zna zna: pogođena / promašena pitanja</string>
    <string name="moj_broj_stat">Moj broj: procenat tačnog broja</string>
    <string name="korak_po_korak_stat">Korak po korak: uspešnost po koraku</string>
    <string name="asocijacije_stat">Asocijacije: rešene / nerešene</string>
    <string name="asocijacije_title">Asocijacije</string>
    <string name="final_solution_hint">Rešenje </string>
    <string name="guess_final_solution">Konačno rešenje</string>
    <string name="skocko_stat">Skočko: uspešnost po pokušaju</string>
    <string name="spojnice_stat">Spojnice: uspešno povezani pojmovi</string>
    <string name="logout">Odjavi se</string>
    <string name="home_title">Početna</string>
    <string name="home_subtitle">Izaberi opciju</string>
    <string name="profile">Profil</string>
    <string name="play_game">Igraj igru</string>
    <string name="notifications">Obaveštenja</string>
    <string name="leaderboard_reward_title">Čestitamo!</string>
    <string name="leaderboard_reward_weekly">Nagrada za nedeljnu rang listu</string>
    <string name="leaderboard_reward_monthly">Nagrada za mesečnu rang listu</string>
    <string name="leaderboard_reward_rank">Osvojeno mesto: %1$d.</string>
    <string name="leaderboard_reward_tokens">+%1$d tokena</string>
    <string name="leaderboard_reward_accept">Preuzmi nagradu</string>
    <string name="leaderboard_reward_icon_description">Osvojena nagrada</string>
    <string name="leaderboard_push_channel_name">Nagrade rang liste</string>
    <string name="leaderboard_push_channel_description">Obaveštenja o osvojenim nagradama na rang listama</string>
    <string name="leaderboard_push_title">Osvojena nagrada</string>
    <string name="leaderboard_push_body">Otvorite aplikaciju da preuzmete nagradu sa rang liste.</string>
    <string name="region_map_marker_snippet">%1$d zvezda, aktivnih igrača: %2$d</string>
    <string name="korak_po_korak_title">Korak po korak</string>
    <string name="round_label">Runda</string>
    <string name="player_turn_label">Na potezu</string>
    <string name="timer_placeholder">70s</string>
    <string name="answer_hint">Unesi konačan pojam</string>
    <string name="submit_answer">Potvrdi odgovor</string>
    <string name="score_label">Rezultat</string>
    <string name="player_one_score">Igrač 1: 0</string>
    <string name="player_two_score">Igrač 2: 0</string>
    <string name="step_1">Korak 1</string>
    <string name="step_2">Korak 2</string>
    <string name="step_3">Korak 3</string>
    <string name="step_4">Korak 4</string>
    <string name="step_5">Korak 5</string>
    <string name="step_6">Korak 6</string>
    <string name="step_7">Korak 7</string>
    <string name="moj_broj_title">Moj broj</string>
    <string name="target_number_label">Traženi broj</string>
    <string name="numbers_label">Brojevi</string>
    <string name="stop">Stop</string>
    <string name="expression_hint">Unesi izraz</string>
    <string name="expression_label">Izraz</string>
    <string name="clear">Obriši</string>
    <string name="submit_expression">Potvrdi izraz</string>
    <string name="ko_zna_zna_title">Ko zna zna</string>
    <string name="question_counter">Pitanje 1/5</string>
    <string name="question_placeholder">Tekst pitanja</string>
    <string name="answer_a">Odgovor A</string>
    <string name="answer_b">Odgovor B</string>
    <string name="answer_c">Odgovor C</string>
    <string name="answer_d">Odgovor D</string>
    <string name="next_question">Sledeće pitanje</string>
    <string name="spojnice_title">Spojnice</string>
    <string name="criterion_label">Kriterijum</string>
    <string name="criterion_placeholder">Poveži pojmove iz leve i desne kolone</string>
    <string name="left_column_label">Leva kolona</string>
    <string name="right_column_label">Desna kolona</string>
    <string name="confirm_connection">Potvrdi povezivanje</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="b4">B4</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="c4">C4</string>
    <string name="d1">D1</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="d4">D4</string>
    <string name="column_a_solution">A</string>
    <string name="column_b_solution">B</string>
    <string name="column_c_solution">C</string>
    <string name="column_d_solution">D</string>
    <string name="final_solution_placeholder">Konačno rešenje</string>
    <string name="skocko_title">Skočko</string>
    <string name="attempts_label">Pokušaji</string>
    <string name="symbols_label">Izaberi znak</string>
    <string name="check_combination">Proveri kombinaciju</string>
    <string name="symbol_skocko">Skočko</string>
    <string name="symbol_square">Kvadrat</string>
    <string name="symbol_circle">Krug</string>
    <string name="symbol_heart">Srce</string>
    <string name="symbol_triangle">Trougao</string>
    <string name="symbol_star">Zvezda</string>
    <string name="symbol_placeholder">SIM</string>
    <string name="result_placeholder">RES</string>
    <string name="finalSolutionInput">Konačno rešenje</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_leaderboard">Rang</string>
    <string name="nav_regions">Regioni</string>
    <string name="nav_chat">Čet</string>
    <string name="nav_daily_missions">Misije</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="waiting_for_match_title">Tražimo protivnika...</string>
    <string name="waiting_for_match_message">Molimo sačekaj dok se drugi igrač poveže.</string>
    <string name="cancel_matchmaking">Otkaži</string>
    <string name="server_url_title">WebSocket server</string>
    <string name="server_url_message">Na početnoj strani zadrži dugme "Igraj igru" da promeniš server za emulator, telefon ili demo mrežu.</string>
    <string name="server_url_hint">ws://192.168.1.50:8080</string>
    <string name="save_server_url">Sačuvaj</string>
    <string name="reset_server_url">Vrati podrazumevano</string>
    <string name="server_url_saved">Server je sačuvan.</string>
    <string name="server_url_reset">Server je vraćen na podrazumevani.</string>
    <string name="friends_title">Prijatelji</string>
    <string name="my_friends">Moji prijatelji</string>
    <string name="search_friend_hint">Korisničko ime</string>
    <string name="search">Pretraži</string>
    <string name="add_friend">Dodaj</string>
    <string name="friend_added">Prijatelj je dodat.</string>
    <string name="friend_avatar">Profilna slika prijatelja</string>
    <string name="friend_search_too_short">Unesite najmanje 2 znaka.</string>
    <string name="loading_friends">Učitavanje prijatelja…</string>
    <string name="friends_loaded">Lista prijatelja</string>
    <string name="no_friends">Još nemaš prijatelje.</string>
    <string name="searching_players">Pretraga…</string>
    <string name="no_players_found">Nema pronađenih igrača.</string>
    <string name="search_results">Rezultati pretrage</string>
    <string name="friend_monthly_rank_value">Mesečni rang: %1$d</string>
    <string name="friend_monthly_rank_unavailable">Mesečni rang: —</string>
    <string name="friend_stars_value">Zvezde: %1$d</string>
    <string name="no_league">Bez lige</string>
    <string name="challenge_friend">Igraj</string>
    <string name="cancel_friend_invite">Prekini</string>
    <string name="friend_invite_sent">Zahtev za partiju je poslat.</string>
    <string name="friend_invite_cancelled">Zahtev za partiju je prekinut.</string>
    <string name="friend_invite_rejected">Prijatelj je odbio partiju.</string>
    <string name="friend_invite_expired">Zahtev za partiju je istekao.</string>
    <string name="friend_invite_title">Nova prijateljska partija</string>
    <string name="friend_invite_message">Prijatelj te je pozvao na partiju.</string>
    <string name="accept_friend_invite">Prihvati</string>
    <string name="reject_friend_invite">Odbij</string>
    <string name="friend_not_available">Prijatelj trenutno nije dostupan za partiju.</string>
    <string name="scan_friend_qr">Skeniraj QR kod</string>
    <string name="qr_camera_permission_required">Dozvola za kameru je potrebna za skeniranje QR koda.</string>
    <string name="qr_scan_cancelled">Skeniranje QR koda je prekinuto.</string>
    <string name="qr_scan_failed">QR kod nije prepoznat.</string>
    <string name="qr_invalid_friend_code">QR kod nije validan kod prijatelja.</string>
    <string name="scan_friend_qr_with_camera">Skeniraj QR kod kamerom i otvori Slagalica link.</string>
    <string name="qr_camera_not_available">Kamera nije dostupna.</string>
    <string name="leaderboard_title">Rang lista</string>
    <string name="weekly_leaderboard">Nedeljna</string>
    <string name="monthly_leaderboard">Mesečna</string>
    <string name="leaderboard_cycle_range">%1$s - %2$s</string>
    <string name="loading_leaderboard">Učitavanje rang liste…</string>
    <string name="leaderboard_load_failed">Rang lista nije učitana.</string>
    <string name="empty_leaderboard">Nema rangiranih igrača u ovom ciklusu.</string>
    <string name="leaderboard_count">Rangirano igrača: %1$d</string>
    <string name="regions_title">Regioni</string>
    <string name="loading_regions">Učitavanje regiona…</string>
    <string name="regions_load_failed">Regioni nisu učitani.</string>
</resources>